Added gh support

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "posts",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Muratovnik.github.io/posts",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -20,6 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
@@ -45,6 +48,7 @@
   },
   "devDependencies": {
     "craco": "^0.0.3",
+    "gh-pages": "^4.0.0",
     "typescript-plugin-css-modules": "^3.4.0"
   }
 }
